logs/xhostplus.gallery.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xhostplus'...
Listing './lib/python3.5/site-packages/xhostplus/gallery'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/browser'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/browser/images'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/browser/javascripts'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/browser/stylesheets'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/content'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/i18n'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/interfaces'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/locales'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/locales/de'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/locales/en'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/portlets'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/profiles'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/profiles/default'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/profiles/default/types'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/skins'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/skins/xhostplus_gallery_custom_images'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/skins/xhostplus_gallery_custom_images/xhostplusbox'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/skins/xhostplus_gallery_custom_javascripts'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/skins/xhostplus_gallery_custom_templates'...
Compiling './lib/python3.5/site-packages/xhostplus/gallery/skins/xhostplus_gallery_custom_templates/xhostplusListAlbum.py'...
***   File "./lib/python3.5/site-packages/xhostplus/gallery/skins/xhostplus_gallery_custom_templates/xhostplusListAlbum.py", line 49
    return result
                ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/xhostplus/gallery/skins/xhostplus_gallery_styles'...
Listing './lib/python3.5/site-packages/xhostplus/gallery/tests'...
Listing './lib/python3.5/site-packages/xhostplus.gallery-1.8.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
